@@ -1,6 +1,12 @@
 ## 示例 byArvin
 - KILL 进程
 ```
+版本：2
+#!/bin/sh
+kill -9 `ps -ef|grep -v grep|grep demo |awk -F " " '{print $2}'`
+ps -ef|grep -v grep|grep demo |awk -F " " '{print $2}'
+
+版本：1
 #!/bin/sh
 kill -9 `jps -l|grep APP-NAME|awk -F " " '{print $1}'`
 jps -l
@@ -14,6 +20,55 @@ do
     sleep 3
 done
 ```
+- 1-start-jmx.sh
+```
+java -Xmx3g -Xms3g -XX:+UseConcMarkSweepGC -XX:+HeapDumpOnOutOfMemoryError -Djava.rmi.server.hostname=8.8.8.19 -Dcom.sun.management.jmxremote -Dcom.sun.management.jmxremote.port=2099 -Dcom.sun.management.jmxremote.authenticate=false -Dcom.sun.management.jmxremote.ssl=false -Dlog4j2.contextSelector=org.apache.logging.log4j.core.async.AsyncLoggerContextSelector -Dlogging.config=/root/demo/config/log4j2-spring.xml -Dspring.config.location=file:/root/demo/config/application.yaml -jar /root/api-router/demo-0.0.1-SNAPSHOT.jar
+
+```
+- 3-check.sh
+```
+pid=`ps -ef|grep -v grep|grep demo`
+if [ -z "$pid" ]; then
+    echo "not found demo"
+else
+    echo "$pid"
+fi
+```
+- 4-jstatd.sh
+```
+jstatd -J-Djava.security.policy=jstatd.all.policy -J-Djava.rmi.server.hostname=8.8.8.18&
+```
+
+- 5-restart.sh
+```
+#!/bin/sh
+ps -ef|grep -v grep|grep demo
+kill -9 `ps -ef|grep -v grep|grep demo |awk -F " " '{print $2}'`
+sleep 1s
+nohup java -Xmx3g -Xms3g -XX:+UseConcMarkSweepGC -XX:+HeapDumpOnOutOfMemoryError -Djava.rmi.server.hostname=8.8.8.18 -Dcom.sun.management.jmxremote -Dcom.sun.management.jmxremote.port=2099 -Dcom.sun.management.jmxremote.authenticate=false -Dcom.sun.management.jmxremote.ssl=false -Dlog4j2.contextSelector=org.apache.logging.log4j.core.async.AsyncLoggerContextSelector -Dlogging.config=/root/demo/config/log4j2-spring.xml -Dspring.config.location=file:/root/api-router/config/application.yaml -jar /root/demo/demo-0.0.1-SNAPSHOT.jar &
+sleep 1s
+echo '============================================================='
+ps -ef|grep -v grep|grep demo
+
+```
+- 7-backup.sh
+```
+#!/bin/sh
+set -x
+set -e
+file_name=demo-0.0.1-SNAPSHOT.jar
+if ! test -e ${file_name}
+then
+echo -e "\033[31m $file_name not found \033[0m"
+exit 0
+fi
+time=$(date +%F-%H%M)
+file_bak_name=${file_name}_${time}
+echo ${file_bak_name}
+mv ${file_name}  ${file_bak_name}
+ls -lht
+
+```
 
 - deploy.sh-部署
 ```
@@ -22,7 +77,7 @@ set -e
 set -u
 set -x
 
-ls -t /tmp/hyperspace-console-web-* | head -1 | xargs -I f cp f .
+ls -t /tmp/demo-console-web-* | head -1 | xargs -I f cp f .
 ls -t | head -1 | xargs tar -zxf
 ```
 > [Linux：set -eux](https://blog.csdn.net/textdemo123/article/details/100694371)
@@ -34,7 +89,7 @@ download.sh
 
 #!/bin/sh
 filePath="/root/package/tmp"
-fileNamePrefix="hyperspace-console-api"
+fileNamePrefix="demo-api"
 downloadLastFileUrl="http://192.168.56.112:9999/downloadLastFile"
 tarFile="$filePath/$fileNamePrefix.tar"
 jarFile="$filePath/$fileNamePrefix.jar"
